[gd_scene load_steps=9 format=2]

[ext_resource path="res://escenas/main.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenas/mundo.gd" type="Script" id=2]
[ext_resource path="res://escenas/ojo.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenas/interfas.tscn" type="PackedScene" id=4]
[ext_resource path="res://img-sprites/background_glacial_mountains.png" type="Texture" id=5]
[ext_resource path="res://sounds/dragon3.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/022815townbgm.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -4.55942, -6.56979, 0, 0, 0, 0, 1487.16, -0.213013, 0, 0, 0, 0, 1487.16, 929.995, 0, 0, 0, 0, 1.79733, 929.995, 0, 0, 0, 0, -4.55942, -6.56979 )
}

[node name="mundo" type="Node"]
script = ExtResource( 2 )
mob = ExtResource( 3 )

[node name="fondo" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 4.0
margin_right = 1483.0
margin_bottom = 930.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dragon2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1276.86, 738.106 )

[node name="mobtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 755.19, 831.558 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="mobpossicion" type="PathFollow2D" parent="Camino"]
position = Vector2( -4.55942, -6.56979 )
rotation = 0.00426143

[node name="interfas" parent="." instance=ExtResource( 4 )]

[node name="audiomuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.315

[node name="soundbg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.474

[connection signal="golpe" from="dragon2" to="." method="game_over"]
[connection signal="timeout" from="mobtimer" to="." method="_on_mobtimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="interfas" to="." method="nuevo_juego"]
